# opendeck-teams-for-linux

./: .gitignore  Cargo.toml  LICENSE  README.md  flake.nix
.github/workflows/: ci.yml  claude-review.yml  release.yml
assets/: README.md
docs/superpowers/plans/: 2026-06-05-opendeck-teams-for-linux.md
docs/superpowers/specs/: 2026-06-05-opendeck-teams-for-linux-design.md
nix/: hm-module.nix
plugin/: manifest.json
plugin/pi/: index.html
scripts/: assemble-plugin.sh  generate-icons.sh
src/: action.rs  control.rs  main.rs  mqtt.rs  settings.rs  state.rs
tests/: protocol.rs
