[package]
name = "opendeck-teams-for-linux"
version = "0.1.1"
edition = "2024"
license = "MIT"
description = "OpenDeck plugin: Microsoft Teams (teams-for-linux) mute button with MQTT-driven state"
repository = "https://github.com/geoffdavis/opendeck-teams-for-linux"

[dependencies]
openaction = "2.6"
rumqttc = { version = "0.25", default-features = false }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "1"
base64 = "0.22"
log = "0.4"
simplelog = "0.12"

[dev-dependencies]
tempfile = "3"
tokio-tungstenite = "0.28"
futures-util = "0.3"

[profile.release]
strip = true
lto = true
